--- a/app/assets/stylesheets/wishes.css
+++ b/app/assets/stylesheets/wishes.css
@@ -66,7 +66,7 @@
 
 .back_0{
   background-color:#1cbbb4 ;
-  background-image: linear-gradient(10deg, #1cbbb4 0%, #0072bc 100%);
+  background-image: linear-gradient(10deg, #0072bc 0%, #1cbbb4 100%);
   
 }
 
@@ -111,8 +111,8 @@
   
 }
 .back_9{
-  background-color:#8E5C3B ;
-  background-image: linear-gradient(10deg, #8E5C3B 0%, #D4A281s 100%);
+  background-color:#4C5A69 ;
+  background-image: linear-gradient(10deg, #4C5A69 0%, #9CAAB9 100%);
   
 }
 
