--- a/app/views/layouts/request.html.erb
+++ b/app/views/layouts/request.html.erb
@@ -12,55 +12,13 @@
 <body>
   <div class="d960">
 
-<div class="req_logo_1">
-<div class="g_inner_logo">
-  <img class="logo_ava" src="<%= image_path("sunny6.jpg") %>">
-</div>
-
-<div class="logo_name">#юляпоговориснами</div>
-<div class="req_logo_text">Просим Юлю Липницкую <br>
-провести трансляцию в перископе!</div>
-  
- <div class="req_count" >
-   к просьбе присоединились <span class='span_count'><%= User.count %></span>  человек 
-    </div>
-  
-</div>
-
-
-
-<div class="req_logo_2">
-    <div class="g_inner_logo">
-        <div class="logo_name" >  Обращение к Юле </div>
-    <div class="req_logo_text">  Юля, официальные интервью, которые ты изредка даешь телевидению - это
-    всего лишь жалкое подобие общения с болельщиками. По настоящему круто - это трансляция в перископе. Тебя любит и обожает
-    половина страны. Не бросай нас, твоих болельщиков.  Проведи трансляцию в перископе!
-    Поговори с нами!
-    </div>
-     
-  </div>  
-</div>
-
-<div class="req_logo_3">
-    <div class="g_inner_logo">
-        <div class="logo_name" style="text-align: center;">  Присоединиться к просьбе</div>
-    <div class="req_logo_text">  Уважаемые фанаты, поклонники и болельщики Юли! 
-    Чем больше человек присоединится к просьбе, тем больше вероятность того, что
-    Юля прислушается к нашему пожеланию и действительно проведет трансляцию в перископе.
-    
- Для того чтобы присоединиться к просьбе нажмите кнопку ниже:
-    
-    </div>
-    
-    <div class="req_button_div">
-      <a href='/auth/vkontakte' class="req_button">войти через vk и присоединиться к просьбе</a>
-      </div>
-     
-  </div>  
-</div>
+ <%= render "index" if @req_index %>
+ <%= render "req" if @req_req %>
 
   
 <%= yield %>
+
+<%= render "req_footer" if @req_req %>
 
 </div> 
 
