--- a/app/views/layouts/wishes.html.erb
+++ b/app/views/layouts/wishes.html.erb
@@ -58,7 +58,7 @@
       
       
        <form method="POST" action="/new_wish" class=""  >
-      <div class="g_enter_text">напиши свое пожелание<br>
+      <div class="g_enter_text">напиши свое обращение<br>
          </div>
       <input type="hidden" name="authenticity_token" value="<%= form_authenticity_token %>">
       <textarea name="body" type="text " rows="5" class="g_form_texarea"></textarea>
