--- a/app/views/request/_index.html.erb
+++ b/app/views/request/_index.html.erb
@@ -3,7 +3,7 @@
   <img class="logo_ava" src="<%= image_path("sunny6.jpg") %>">
 </div>
 
-<div class="logo_name">#юляпоговориснами</div>
+<div class="logo_name">#юля_поговори_с_нами</div>
 <div class="req_logo_text">Просим Юлю Липницкую <br>
 провести трансляцию в перископе!</div>
   
