--- a/app/views/request/test.html.erb
+++ b/app/views/request/test.html.erb
@@ -1,17 +1,42 @@
-<div class="req_logo_1 test_height">
-<div class="g_inner_logo">
-  <img class="test_logo_ava" src="<%= image_path("sunny6.jpg") %>">
-</div>
+<section id="banner">
+   <div class="wrapper">
+    <header>
+        <p id="logo">Super<span>Mega</span>Awesome</p>
+        <nav>
+            <a href="#">Home</a>
+            <a href="#">Portfolio</a>
+            <a href="#">Servises</a>
+            <a href="#" class= "button button_secondary button_small">Get in Touch</a>
+        </nav>
+    </header>   
+    <div class="content">
+       <h1 class="mc_title">We create beautiful products</h1> 
+       <h2 class="sub_title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Architecto, quam accusamus ducimus quod minus iste blanditiis vitae quos dolore ipsum non enim adipisci velit alias dolor sint harum impedit voluptatibus.</h2>
+        <div class="button_wrapper">
+            <a href="#" class="button button_highlight">Learn More</a>
+            <a href="#" class="button button_secondary">Play Video</a>
+        </div>
+    </div>   
+     
+    
+       
+   </div> 
+</section>
 
-<div class="test_logo_name">#юля_поговори_с_нами</div>
-<div class="test_req_logo_text">Просим Юлю Липницкую <br>
-провести трансляцию в перископе!</div>
-  
- <div class="test_logo_name"><span style='font-size:20px;'>сбор голосов на сайте</span> <br>sunny5.ru
- 
- <br>
- <br>
- 
- </div>
-  
-</div>
+<section id="inner">
+   <div class="wrapper">
+       <div class="inner_logo">
+           <h1>Музыкальные вечеринки</h1>
+           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore, mollitia iusto dicta harum architecto saepe esse suscipit consectetur ullam fuga! Sit hic ipsum sequi sint vitae maxime sapiente porro unde.
+      
+          <div class="button_wrapper">
+              <a href="#" class="button button_white">Подробнее</a>
+            <a href="#" class="button button_highlight">Я буду зрителем</a>
+            <a href="#" class="button button_secondary">Я буду выступать</a>
+          </div>
+      
+      
+       </div>
+       
+   </div> 
+</section>
