--- a/app/views/application/_login_form.html.erb
+++ b/app/views/application/_login_form.html.erb
@@ -2,6 +2,7 @@
      <div class="css_enter ">
       
       
+      <!--
        <form method="POST" action="/enter" class="email_enter"  >
       
         <table><tr><td width=100px></td><td>
@@ -16,7 +17,7 @@
 
 
             <br>
-                <button type="submit" class="js_test css_button_menu enter wide burger">ГОТОВО</button> 
+                <button type="submit" class="js_test css_button_menu enter  burger">ГОТОВО</button> 
            </td></table>
            
             </form>
@@ -36,5 +37,8 @@
                  
                  
              </table>
-             <br>
+             <br> -->
+             
+       <a class="css_blog_menu" href="/auth/vkontakte">войти через вконтакте
+                </a>
      </div>
